After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745207 - video-converter: sometimes crashes during ARGB -> BGRx conversion.
video-converter: sometimes crashes during ARGB -> BGRx conversion.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 737401
 
 
Reported: 2015-02-26 12:38 UTC by RaviKiran
Modified: 2015-03-04 11:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cache alloc line when border is available (1.30 KB, patch)
2015-02-26 12:51 UTC, RaviKiran
rejected Details | Review

Description RaviKiran 2015-02-26 12:38:48 UTC
video-converter sometimes crashes during ARGB -> BGRx conversion with borders.
Reason is in converter_generic
guint8 *l = ((guint8 *) lines[0]) - lb_width; 
points to invalid location when there is border.
Comment 1 RaviKiran 2015-02-26 12:51:39 UTC
Created attachment 297972 [details] [review]
cache alloc line when border is available

Patch attached. Please review
Comment 2 Tim-Philipp Müller 2015-02-28 15:29:24 UTC
In case you feel like adding a small unit test for this as well, that'd be great!
Comment 3 Wim Taymans 2015-03-04 11:31:14 UTC
I made a better patch that avoids a memcpy when there is scaling involved.

commit e0a192d3dde09e52e24f0e91d2b7eddd135a04ed
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Wed Mar 4 12:21:33 2015 +0100

    video-converter: don't reuse the input line when adding borders
    
    When we need to add borders, we need a writable input line, so
    don't reuse the source memory directly.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=745207